--- a/src/app/allergens/allergens.component.html
+++ b/src/app/allergens/allergens.component.html
@@ -2,11 +2,11 @@
 
 <mat-form-field class="allergen-list">
   <mat-chip-grid #chipList>
-    <mat-chip *ngFor="let allergen of allergens"
+    <mat-chip-option *ngFor="let allergen of allergens"
              [removable]="true" (removed)="delete(allergen)">
       {{allergen.name}}
       <mat-icon matChipRemove >cancel</mat-icon>
-    </mat-chip>
+    </mat-chip-option>
     <input placeholder="New Allergen..."
            [matChipInputFor]="chipList"
            [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
