--- a/src/app/restaurant-search/restaurant-search.component.scss
+++ b/src/app/restaurant-search/restaurant-search.component.scss
@@ -1,7 +1,7 @@
 
 #search-component {
 	margin: 20px 0;
-	.mat-spinner {
+	.mat-mdc-progress-spinner {
 		margin: 50px auto;
 	}
 
@@ -9,7 +9,7 @@
 		margin-left: 15px;
 	}
 
-	.mat-form-field {
+	.mat-mdc-form-field {
 		margin-left: 15px;
 		vertical-align: middle;
 	}
