--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,7 +1,13 @@
-@import '~@angular/material/theming';
-@include mat-core();
-$my-app-primary: mat-palette($mat-blue);
-$my-app-accent:  mat-palette($mat-blue);
-$my-app-warn:    mat-palette($mat-blue);
-$my-app-theme: mat-light-theme($my-app-primary, $my-app-accent, $my-app-warn);
-@include angular-material-theme($my-app-theme);
+@use '@angular/material' as mat;
+@include mat.core();
+$my-app-primary: mat.define-palette(mat.$blue-palette, 500);
+$my-app-accent:  mat.define-palette(mat.$blue-palette, 500);
+$my-app-warn:    mat.define-palette(mat.$blue-palette, 500);
+$my-app-theme:   mat.define-light-theme((
+  color: (
+    primary: $my-app-primary,
+    accent: $my-app-accent,
+    warn: $my-app-warn,
+  )
+));
+@include mat.all-component-themes($my-app-theme);
