Fix allergens styles

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
-<mat-tab-group>
-	<mat-tab label="Restaurants"> 
+<mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start">
+	<mat-tab label="Restaurants">
 		<app-restaurants></app-restaurants>
 	</mat-tab>
 	<mat-tab label="Allergens">
