--- a/src/app/restaurant-search/restaurant-search.component.html
+++ b/src/app/restaurant-search/restaurant-search.component.html
@@ -1,7 +1,8 @@
 <div id="search-component">
-	<mat-form-field>
-		<input matInput placeholder="Restaurant Search" #searchBox id="search-box" (input)="searchKeyword(searchBox.value)" />
-	</mat-form-field>
+  <mat-form-field appearance="fill">
+    <mat-label>Restaurant Search</mat-label>
+		<input matInput #searchBox id="search-box" (input)="searchKeyword(searchBox.value)" />
+  </mat-form-field>
 	<div class="action-links">
 		<p class="link" (click)="searchBox.value = '';all()">Show all</p>
 		<p class="link" (click)="searchBox.value = '';nearbyAndSafe()">Near me</p>
@@ -12,11 +13,11 @@
 	<ng-template #noResults>
 		<p class="no-results">No Restaurants found!</p>
 	</ng-template>
-	
+
 	<div class="search-results-container">
 		<div *ngIf="restaurants$ | async as restaurants; else loading" class="search-term-results">
 			<ng-container *ngIf="restaurants.length; else noResults">
-				<app-restaurant [restaurant]="restaurant" *ngFor="let restaurant of restaurants" class="app-restaurant"></app-restaurant>	
+				<app-restaurant [restaurant]="restaurant" *ngFor="let restaurant of restaurants" class="app-restaurant"></app-restaurant>
 			</ng-container>
 		</div>
 	</div>
