--- a/src/app/restaurant-search/restaurant-search.component.html
+++ b/src/app/restaurant-search/restaurant-search.component.html
@@ -5,7 +5,7 @@
   </mat-form-field>
 	<div class="action-links">
 		<p class="link" (click)="searchBox.value = '';all()">Show all</p>
-		<p class="link" (click)="searchBox.value = '';nearbyAndSafe()">Near me</p>
+		<!-- <p class="link" (click)="searchBox.value = '';nearbyAndSafe()">Near me</p> -->
 	</div>
 	<ng-template #loading>
 		<mat-spinner></mat-spinner>
