--- a/src/app/restaurant/restaurant.component.scss
+++ b/src/app/restaurant/restaurant.component.scss
@@ -1,6 +1,6 @@
-.restaurant-component {
+:host {
 	text-decoration: none;
-	
+
 	&:active, &:focus, &:visited {
 		color: initial;
 	}
@@ -12,6 +12,8 @@
 			margin: 0;
 			max-width: 100%;
 			max-height: 100%;
+      width:100%;
+      height: auto;
 		}
 
 		.mat-mdc-card-header {
@@ -24,15 +26,20 @@
 
 		.mat-mdc-card-content {
 			display: flex;
-			height: 100px;	
-		}
-
-		.mat-badge-content {
-		    width: 40px;
-		    height: 40px;
-		    line-height: 40px;
+			height: 100px;
+      padding-bottom: 16px;
 		}
 	}
+}
+
+.mat-mdc-card-title {
+  line-height: 1.2;
+}
+
+.mat-badge-content.mat-badge-active{
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
 }
 
 :host {
