--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,6 +38,12 @@ object, video {
 	    margin: 0 16px 0 0;
 	}
 
+  .mat-badge-content.mat-badge-active {
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+  }
+
 }
 
 @media only screen and (min-width: 380px) {
