Fix issues with badge off screen

--- a/src/app/allergen-search/allergen-search.component.html
+++ b/src/app/allergen-search/allergen-search.component.html
@@ -8,7 +8,7 @@
 
   <ul class="search-result">
     <li *ngFor="let allergen of allergens$ | async" >
-      <a [routerLink]="['/detail/', allergen.id]">
+      <a [routerLink]="['/detail/']">
         {{allergen.name}}
       </a>
     </li>
