Fix favorite restaurants forever loading - re writing as observable with async

--- a/src/app/restaurants/restaurants.component.html
+++ b/src/app/restaurants/restaurants.component.html
@@ -1,8 +1,8 @@
 <div class="tab-body">
-  <h2 *ngIf="favoriteRestaurants.length">My Favorites</h2>
+  <h2 *ngIf="(favoriteRestaurants$ | async)?.length">My Favorites</h2>
   <mat-spinner *ngIf="loading"></mat-spinner>
   <div class="favorites">
-    <app-restaurant [restaurant]="restaurant" *ngFor="let restaurant of favoriteRestaurants" class="app-restaurant"></app-restaurant>
+    <app-restaurant [restaurant]="restaurant" *ngFor="let restaurant of favoriteRestaurants$ | async; else loading" class="app-restaurant"></app-restaurant>
   </div>
   <app-restaurant-search [allergens]="allergens"></app-restaurant-search>
 </div>
