--- a/src/app/restaurants/restaurants.component.html
+++ b/src/app/restaurants/restaurants.component.html
@@ -1,8 +1,10 @@
-<div class="tab-body">
+<div id="favorites-and-all" class="tab-body">
   <h2 *ngIf="(favoriteRestaurants$ | async)?.length">My Favorites</h2>
-  <mat-spinner *ngIf="loading"></mat-spinner>
-  <div class="favorites">
-    <app-restaurant [restaurant]="restaurant" *ngFor="let restaurant of favoriteRestaurants$ | async; else loading" class="app-restaurant"></app-restaurant>
+	<ng-template #loading>
+		<mat-spinner></mat-spinner>
+	</ng-template>
+  <div class="favorites" *ngIf="favoriteRestaurants$ | async as restaurants; else loading">
+    <app-restaurant [restaurant]="restaurant" *ngFor="let restaurant of restaurants" class="app-restaurant"></app-restaurant>
   </div>
   <app-restaurant-search [allergens]="allergens"></app-restaurant-search>
 </div>
